--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -1,6 +1,6 @@
 {
   "default": {
     "channel": "cyber-aislings-bedroom",
-    "token": "NjkwNzE2Mjk3Nzc1ODA4NTky.XnVdww.OAXYhmJd-tV_6esfPtJrzi-SOfs"    
+    "token": "YOU NO GET TOKEN"    
   }
 }
